--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
-    "pdfkit": "^0.17.1"
+    "express-validator": "^7.2.1",
+    "pdfkit": "^0.17.1",
+    "uuid": "^11.1.0"
   }
 }
